deploy/deployment-icecast.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamer
  namespace: plstreamer
spec:
  selector:
    matchLabels:
      app: streamer
  template:
    metadata:
      labels:
        app: streamer
    spec:
      containers:
        - name: streamer
          image: localhost:32000/icecast
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
          ports:
          - containerPort: 9000
            protocol: TCP
