deploy/deployment-mpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpc
  namespace: plstreamer
spec:
  selector:
    matchLabels:
      app: mpc
  template:
    metadata:
      labels:
        app: mpc
    spec:
      containers:
        - name: mpc
          image: localhost:32000/mpc
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
