deploy/deployment-mpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player-default
  namespace: plstreamer
spec:
  selector:
    matchLabels:
      app: player-default
  template:
    metadata:
      labels:
        app: player-default
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: plstreamerdata
      containers:
        - name: player-default
          image: localhost:32000/mpd
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
          - mountPath: /code
            name: data
        - name: mpc-default
          image: localhost:32000/mpc
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: player-dancehall
  namespace: plstreamer
spec:
  selector:
    matchLabels:
      app: player-dancehall
  template:
    metadata:
      labels:
        app: player-dancehall
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: plstreamerdata
      containers:
        - name: player-dancehall
          image: localhost:32000/mpd
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
          - mountPath: /code
            name: data
        - name: mpc-dancehall
          image: localhost:32000/mpc
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: player-rnb
  namespace: plstreamer
spec:
  selector:
    matchLabels:
      app: player-rnb
  template:
    metadata:
      labels:
        app: player-rnb
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: plstreamerdata
      containers:
        - name: player-rnb
          image: localhost:32000/mpd
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
          - mountPath: /code
            name: data
        - name: mpc-rnb
          image: localhost:32000/mpc
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
