deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamer
  namespace: plstreamer
spec:
  selector:
    matchLabels:
      app: streamer
  template:
    metadata:
      labels:
        app: streamer
    spec:
      containers:
        - name: streamer
          image: localhost:32000/icecast
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
          ports:
          - containerPort: 9000
            protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-player
  namespace: plstreamer
spec:
  selector:
    matchLabels:
      app: default-player
  template:
    metadata:
      labels:
        app: default-player
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: plstreamerdata
      containers:
        - name: default-player
          image: localhost:32000/player
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
          - mountPath: /code
            name: data

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dancehall-player
  namespace: plstreamer
spec:
  selector:
    matchLabels:
      app: dancehall-player
  template:
    metadata:
      labels:
        app: dancehall-player
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: plstreamerdata
      containers:
        - name: dancehall-player
          image: localhost:32000/player
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
          - mountPath: /code
            name: data

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rnb-player
  namespace: plstreamer
spec:
  selector:
    matchLabels:
      app: rnb-player
  template:
    metadata:
      labels:
        app: rnb-player
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: plstreamerdata
      containers:
        - name: rnb-player
          image: localhost:32000/player
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
          - mountPath: /code
            name: data
