deploy/service-mpd.yaml
apiVersion: v1
kind: Service
metadata:
  name: player-svc
  namespace: plstreamer
spec:
  selector:
    component: player
  ports:
  - name: app
    protocol: TCP
    port: 6600
    targetPort: 6600
