deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plstreamer-ingress
  namespace: plstreamer
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  ingressClassName: public
  tls:
  - hosts:
    - stream.wieru.com
    secretName: tls-secret
  rules:
  - host: stream.wieru.com
    http: 
      paths:
        - path: /default
          pathType: Prefix
          backend:
            service:
              name: svc-default
              port:
                number: 9000
        - path: /rnb
          pathType: Prefix
          backend:
            service:
              name: svc-rnb
              port:
                number: 9000
        - path: /dancehall
          pathType: Prefix
          backend:
            service:
              name: svc-dancehall
              port:
                number: 9000
        - path: /80s
          pathType: Prefix
          backend:
            service:
              name: svc-80s
              port:
                number: 9000
